# datapipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
data/: sales_20251015214842.csv
example_data_model/: V1__init.sql  V2__insert_mock_data.sql
migrations/: V1__init.sql
scripts/: generate_mock_data.py  init_bucket.py  upload_to_azurite.py
src/etl_pipeline/: main.py
src/etl_pipeline/extract/: from_storage.py
src/etl_pipeline/load/: to_sql.py
src/etl_pipeline/transform/: sales_data.py
src/etl_pipeline/utils/: csv_schemas.py  env_vars.py  logger.py  mapping.py  table_schemas.py  utils.py
